TestSuite/errors/err0424_case.pas
begin
  case 5 of
    3..8: Print(2);
    4..9: Print(2);
    21..50: Print(1);
    1..3: Print(1);
  end;
end.